[package]
name = "hexagonal_pathfinding_astar"
version = "0.3.0"
authors = ["BlondeBurrito"]
edition = "2018"
keywords = ["pathfinding", "astar", "a-star", "A*"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
