[package]
name = "hexagonal_pathfinding_astar"
version = "0.8.3"
rust-version = "1.58"
authors = ["BlondeBurrito"]
edition = "2021"
description = "A-Star pathfinding algorithm tailored for traversing a bespoke collection of weighted hexagons"
keywords = ["pathfinding", "astar", "a-star", "gamedev"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlondeBurrito/hexagonal_pathfinding_astar"
exclude = [
    ".github/**",
    "justfile",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
